<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s.ahmadsq.shhi.adminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="674dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_icon"
            app:srcCompat="@drawable/big_big_house" />

        <Button
            android:id="@+id/lightButt2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/control_light" />

        <Button
            android:id="@+id/clockButt2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/clock_alarm" />

        <Button
            android:id="@+id/notificationButt2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/notification" />

        <Button
            android:id="@+id/manageButt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/manage_account" />

        <Button
            android:id="@+id/signoutButt2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sign_out" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
