<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s.ahmadsq.shhi.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="673dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_icon"
            app:srcCompat="@drawable/big_big_house" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/lightButt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/control_light" />

        <Button
            android:id="@+id/clockButt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/clock_alarm" />

        <Button
            android:id="@+id/notificationButt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/notification" />

        <Button
            android:id="@+id/signoutButt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sign_out" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
