<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s.ahmadsq.shhi.clockAlarmActivity"
    tools:layout_editor_absoluteY="89dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/setButt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set" />

        <Button
            android:id="@+id/unsetButt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unset" />

        <TextView
            android:id="@+id/time_update_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_a_clock_alarm"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="510dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
